# spacecast

./: .formatter.exs  .gitignore  .gitmodules  DEBUGGING_THEME_DEBUG_TOGGLE.md  FLOATING_CONTROLS.md  MIGRATION_PLAN.md  README.md  REPOSITORY_IMPROVEMENTS.md  SETUP_GUIDE.md  TEST_SUMMARY.md  babel.config.js  justfile  mix.exs  package-lock.json  rename_script.sh  shell.nix  update-css.sh
assets/: package-lock.json  package.json
assets/css/: app.css
assets/css/components/: _index.css  ascii-art-editor.css  code-flow-visualizer.css  data-visualizer.css  examples-index.css  examples.css  list_view.css  modal_components.css  network-topology.css  system-monitor.css  timeline_view.css  transformation-metrics.css
assets/js/: app.js  component_loader.js  event_manager.js  theme_hooks.js
assets/js/components/: accessibility_menu_toggle.js  copyable_code.js  debug_grid_toggle.js  file_download.js  floating_controls.js  info_box.js  keyboard_navigation.js  mono_tabs.js  notifications.js  toast.js
assets/js/generators/: ascii_art_generator.js
assets/js/utils/: dom_cleanup.js  viewport_detector.js
config/: config.exs  coveralls.exs  dev.exs  discord_providers.exs  email_providers.exs  prod.exs  push_providers.exs  runtime.exs  sms_providers.exs  telegram_providers.exs  telemetry.exs  test.exs  webhook_providers.exs
docker/: Dockerfile.dev  docker-compose.monitoring.yml  docker-compose.yml
docs/: CI_CD_SETUP.md  INTEGRATION_TESTING.md  LIVEVIEW_TESTING_PROGRESS.md  MONITORING_SETUP.md  NEXT_AGENT_PLAN.md
docs/examples/: ARCHITECTURE.md  LIVEVIEW.md
docs/examples/components/: file_drop_example.html  modal_component.js  modal_component.scss  progress_bar_example.html  resource_card.html  transformation_demo.exs
examples/: ARCHITECTURE.md  LIVEVIEW.md  USAGE.md
examples/components/: event_bus_demo.html  file_drop_example.html  modal_component.test.js  modal_usage_example.js  progress_bar_example.html  resource_card.html  resource_card_example.js  toast_example.html  transformation_pipeline_demo.exs
lib/: spacecast.ex  spacecast_web.ex
lib/events/: password_management.ex  sms_notifications.ex  user_auth.ex
lib/libsignal-protocol-nif/: .gitignore  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  rebar.config
lib/libsignal-protocol-nif/c_src/: CMakeLists.txt  constants.h  libsignal_protocol_nif.c  libsignal_protocol_nif_v2.c  nif.c  signal_nif.c  types.h
lib/libsignal-protocol-nif/c_src/cache/: cache.c  cache.h
lib/libsignal-protocol-nif/c_src/crypto/: CMakeLists.txt  crypto.c  crypto.h
lib/libsignal-protocol-nif/c_src/keys/: keys.c  keys.h
lib/libsignal-protocol-nif/c_src/protocol/: CMakeLists.txt  protocol.c  protocol.h
lib/libsignal-protocol-nif/c_src/session/: session.c  session.h
lib/libsignal-protocol-nif/c_src/utils/: error_handling.c  error_handling.h  utils.c  utils.h
lib/libsignal-protocol-nif/config/: build.config
lib/libsignal-protocol-nif/docker/: Dockerfile  docker-compose.yml
lib/libsignal-protocol-nif/docs/: API.md  ARCHITECTURE.md  CROSS_LANGUAGE_COMPARISON.md  DOCUMENTATION_PLAN.md  IMMEDIATE_ACTIONS.md  IMPLEMENTATION.md  SECURITY.md
lib/libsignal-protocol-nif/erl_src/: libsignal_protocol_nif.app.src  libsignal_protocol_nif.erl  libsignal_protocol_nif_v2.erl  signal_nif.erl
lib/libsignal-protocol-nif/scripts/: aggregate_coverage.sh  copy_nifs.sh  monitor.sh  release.sh  test-build.sh  test-ci-fixes.sh  test_coverage_improvements.sh  test_docker_build.sh  verify_foundation.sh
lib/mix/tasks/: coverage.ex
lib/spacecast/: about.ex  accounts.ex  application.ex  bridge.ex  content.ex  default_external_api.ex  events.ex  external_api.ex  mailer.ex  mock_external_api.ex  projects.ex  prom_ex.ex  rate_limit_cleanup.ex  rate_limit_supervisor.ex  repo.ex  repo_helper.ex  resource_helpers.ex  resource_system.ex  resources.ex  signal_protocol.ex  telemetry.ex  theme_system.ex
lib/spacecast/accounts/: password.ex  user.ex  user_token.ex
lib/spacecast/components/: transformation_metrics_viewer.ex
lib/spacecast/events/: README_crypto.md  crypto_service.ex  delivery_service.ex  email_adapter.ex  event.ex  event_bus.ex  event_store.ex  (+25 more)
lib/spacecast_web/: endpoint.ex  gettext.ex  layouts.ex  presence.ex  router.ex  socket.ex  telemetry.ex  test_embed.ex  test_embed.html.heex
monitoring/: prometheus.yml  start_monitoring.sh
monitoring/grafana/: PROMEX_README.md
priv/repo/: seeds.exs  structure.sql
priv/static/: cache_manifest.json
scripts/: cleanup_unused_code.exs  coverage_analyzer.exs  find_unused_code.exs  fix_unused_functions.exs  fix_unused_variables.exs  remove_unused_functions.exs  run_integration_tests.exs  run_stabilized_tests.exs  setup_dev_env.sh  summarize_test_errors.sh  test_browser.sh  test_ci_locally.sh  test_liveview.sh
test/: css_organization_test.exs  enhanced_error_reporting_test.exs  simple_test.exs  test_helper.exs  test_helper_no_db.exs
test/socket_validator/: enhanced_type_validation_test.exs  type_validation_test.exs
test/spacecast/: signal_protocol_test.exs  theme_system_test.exs
test/spacecast_web/: accessibility_test.exs  font_optimizations_test.exs
test/support/: README_event_sourcing_pattern.md  README_test_infrastructure.md  accessibility_assertions.ex  accessibility_helper.ex  component_test_helper.ex  conn_case.ex  data_case.ex  enhanced_error_reporter.ex  event_store_test_helper.ex  event_test_helper.ex  fixture_helper.ex  js_test_helper.ex  libsignal_protocol_nif_stub.ex  live_socket_test_helpers.ex  live_view_case.ex  mock_crypto_service.ex  mock_event_store.ex  mock_helper.ex  mocks.ex  performance_monitor.ex  render_helper.ex  repo_behaviour.ex  repo_helper.ex  repo_mock.ex  resource_system_helper.ex  signal_nif_module.ex  signal_nif_stub.ex  signal_protocol_stub.ex  test_config.ex  test_data_factory.ex  test_event_store.ex  test_helpers.ex  test_live.ex  test_setup_helper.ex  theme_helper.ex  theme_system_helper.ex  visual_regression_helper.ex  wallaby_case.ex  wallaby_fallback_helper.ex  wallaby_ui_helper.ex
tmp/: test_error_summary.txt  test_output.txt
(+4080 files in other folders)
